fixed overflow hidden

--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -12,5 +12,5 @@ body
   align-items: center
   justify-content: center
   height: 100vh
-  overflow-x: hidden
+  overflow: hidden
   margin: 0
